--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       start_period: 60s
 
   flask-app:
-    image: laxmanukadam/devops2025:flask-mysqlmyapps
+    image: laxmanukadam/two-tier-flask-app:latest
     container_name: flask-app
     ports:
       - "5000:5000"
