--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,9 @@ services:
       start_period: 60s
 
   flask-app:
-    image: laxmanukadam/two-tier-flask-apps:latest
+    #image: laxmanukadam/two-tier-flask-apps:latest
+    build:
+      context: .
     container_name: flask-app
     ports:
       - "5000:5000"
